crates/rdra-syntax/src/snapshots/rdra_syntax__parser__tests__parse_instance_decl.snap
---
source: crates/rdra-syntax/src/parser.rs
expression: ast
---
Ast {
    items: [
        Instance(
            InstanceDecl {
                kind: Actor,
                id: "Customer",
                label: "顧客",
                columns: [],
                span: 0..23,
            },
        ),
    ],
    source: "actor Customer \"顧客\"",
}
