crates/rdra-syntax/src/snapshots/rdra_syntax__parser__tests__parse_module.snap
---
source: crates/rdra-syntax/src/parser.rs
expression: ast
---
Ast {
    items: [
        Module(
            DottedName(
                [
                    "shared",
                    "actors",
                ],
            ),
            0..20,
        ),
    ],
    source: "module shared.actors",
}
